feat: add documentation for create Computer
